Closed
Bug 296377
Opened 20 years ago
Closed 20 years ago
Corrupted graphics around "Junk Mail" button when using the classic skin.
Categories
(SeaMonkey :: MailNews: Message Display, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: hand_of_fate2000, Assigned: roc)
Details
Attachments
(3 files, 1 obsolete file)
|
237.45 KB,
image/png
|
Details | |
|
453 bytes,
application/vnd.mozilla.xul+xml
|
Details | |
|
3.39 KB,
patch
|
dbaron
:
review+
dbaron
:
superreview+
chofmann
:
approval1.8b3+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.8b2) Gecko/20050530
Build Identifier: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.8b2) Gecko/20050530
I am testing build 2005053005 under Mandrakelinux 10.1 COmmunity.
The first time I launch the mail component in any gives session, when I move the
cursor over the "Junk Mail" button, the graphics around the button appears
distorted while the mouse is over it.
This problem does not always happen when the cursor is over this button, but
does always happen the first time in any Mozilla session, and quite often after
that. It seems to be only a problem when using the Classic skin.
Reproducible: Sometimes
Build 2005053005 with the "Classic" theme, under Mandrakelinux 10.1 Community.
I see this corruption also. It's been around forever but not irritating enough
to get me to log a bug. Thanks for logging. Note this even happens in
thunderbird and with the latest cvs builds.
The problem (as you mention) only manifests itself with the classic skin and
only happens since there is no mouse-over graphic defined for the junk button.
Seems like a mouse over event is being triggered even when the Junk button is
not supposed to be active or taking events and thus is being replaced with a
corrupted image from some random area in memory.
Comment 2•20 years ago
|
||
this seems to have started happening after the checkin for bug 251492 (between
suite builds 2004-10-25 05:00:00 and 2004-10-26 06:00:00)
Severity: trivial → normal
Status: UNCONFIRMED → NEW
Ever confirmed: true
Version: unspecified → Trunk
Comment 3•20 years ago
|
||
Actually the junk button does have a mouseover graphic.
You can look at all the graphics for all the buttons:
(you may have to type this manually into the location bar)
chrome://messenger/skin/icons/btn1.gif
Agreed it does have a mouseover or a hover image, but no event should be
triggered when the button is actually inactive. So for example open your email
and click on a mailbox or account (i.e. don't actually select a email). The
'Junk' button is greyed out (as is the 'Reply', 'Forward', 'Delete', 'Print'
etc...) and should not take any events. However, hovering over the 'Junk' button
specifically will make it change it's graphic to some random corruption, and
when you're out of focus the image is correctly restored.
P.s. I've noticed this only happens with gtk2 build, as my gtk1 build at the
office works just fine. I will attach a gif
Note, my mouse is actually hovering above the 'Junk' button but is not captured
since my Xorg server is using the hardware mouse feature.
Comment 6•20 years ago
|
||
This might be a paint problem, but CC'ing roc too in case views are involved
(the Junk button is inside a deck).
| Assignee | ||
Comment 7•20 years ago
|
||
Is it only the Junk button?
Anyone got a lead on a smaller testcase than all of Thunderbird? ;-)
Roc, it happens in the mail component in mozilla too. There's not real
'testcase'. And yes, it is *only* the 'Junk' button that is affected.
| Assignee | ||
Comment 9•20 years ago
|
||
Is there something funny about the Junk Mail GIF? If you replace the Junk Mail
GIF with a different image, does it work? What is special about the Junk Mail
button?
I wonder if this is a case where the view is being marked Opaque for some reason
when it doesn't fully draw its background.
Comment 10•20 years ago
|
||
mousing over the button shows the same corrupted display as the junk mail
button:
<deck style="-moz-image-region: rect(0px 20px 20px 0);">
<toolbarbutton label="label" disabled="true"
style="list-style-image:
url('https://bugzilla.mozilla.org/mozilla-banner.gif');"/>
</deck>
Comment 11•20 years ago
|
||
The test case didn't work for me possibly because of XUL coding "errors"
(wrong root tag and no stylesheet).
The corruption is fairly repeatable particularly if you hover over another
toolbarbutton that is a pixel wider than the button under test, when you see a
near-perfect ghost of that toolbarbutton. I don't understand opaque views so I
just hope that my description corroborates roc's guess :-)
Attachment #186777 -
Attachment is obsolete: true
| Assignee | ||
Comment 12•20 years ago
|
||
Frames which have -moz-appearance set on them don't paint their background
color so we must assume they are not opaque.
| Assignee | ||
Updated•20 years ago
|
Assignee: mail → roc
Status: NEW → ASSIGNED
Attachment #186894 -
Flags: superreview?(dbaron)
Attachment #186894 -
Flags: review?(dbaron)
Attachment #186894 -
Flags: superreview?(dbaron)
Attachment #186894 -
Flags: superreview+
Attachment #186894 -
Flags: review?(dbaron)
Attachment #186894 -
Flags: review+
| Assignee | ||
Comment 13•20 years ago
|
||
Comment on attachment 186894 [details] [diff] [review]
fix
simple, very low risk fix to nasty looking visual garbage in the UI
Attachment #186894 -
Flags: approval1.8b3?
Comment 14•20 years ago
|
||
Comment on attachment 186894 [details] [diff] [review]
fix
a=chofmann
Attachment #186894 -
Flags: approval1.8b3? → approval1.8b3+
| Assignee | ||
Comment 15•20 years ago
|
||
checked in
Status: ASSIGNED → RESOLVED
Closed: 20 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•