Bug 296377. Frames that use -moz-appearance may be transparent even if their background color is set, because the background color is not painted. r+sr=dbaron,a=chofmann